--- a/rmageddon_contacts.Rmd
+++ b/rmageddon_contacts.Rmd
@@ -9,15 +9,12 @@ knitr::opts_chunk$set(echo = TRUE)
 ```
 
 \begin{center}
-\begin{tabular}{|c|c|c|}
+\begin{tabular}{|c|c|c|c|}
 \hline
-\textbf{Team Name} & \multicolumn{2}{|c|}{R-Mageddon} \\
+\textbf{Team Name} & \textbf{Team Member} & \textbf{Email} & \textbf{Primary Team Member} \\
 \hline
-\textbf{Team Member} & Ethan Allavarpu & Dara Tan\\
-\hline
-\textbf{Email} & ethanallavarpu@g.ucla.edu & tanxuendara@ucla.edu \\
-\hline
- & Primary & \\
+R-Mageddon & Ethan Allavarpu & ethanallavarpu@g.ucla.edu & Primary\\
+& Dara Tan & tanxuendara@ucla.edu & \\
 \hline
 \end{tabular}
 \end{center}
