--- a/state_nmu.Rmd
+++ b/state_nmu.Rmd
@@ -17,7 +17,8 @@ for (i in seq_len(ncol(states) - 1) + 1) {
     scale_fill_continuous( low = "white", 
                            high = rgb(0.5, 0, 0), 
                            name = "Average NMU", 
-                           label = scales::comma) + 
+                           label = scales::comma,
+                           limits = range(states[, -1])) + 
     theme(legend.position = "right") + 
     theme(panel.background = element_rect(color = "black")) + 
     labs(title = paste("Average", names(states)[i], "NMU by State", collapse = " ")))
