--- a/state_nmu_prop.Rmd
+++ b/state_nmu_prop.Rmd
@@ -10,6 +10,7 @@ knitr::opts_chunk$set(echo = TRUE)
 ```{r, fig.height=3}
 source("state_nmu_prop.R")
 source("state_nmu.R")
+state_nmu[is.na(state_nmu)] <- 0
 par(mfrow = c(1, 2))
 for (i in seq_len(ncol(states) - 1) + 1) {
   print(plot_usmap(data = states, 
@@ -20,7 +21,7 @@ for (i in seq_len(ncol(states) - 1) + 1) {
                            high = rgb(0.5, 0, 0), 
                            name = "Average NMU", 
                            label = scales::comma,
-                           limits = range(states[, -1])) + 
+                           limits = if(i < 19) {range(states[, -c(1, 19)])}else{NULL}) + 
     theme(legend.position = "right") + 
     theme(panel.background = element_rect(color = "black")) + 
     labs(title = paste("Average", names(states)[i], "NMU by State", collapse = " ")))
@@ -32,7 +33,7 @@ for (i in seq_len(ncol(states) - 1) + 1) {
                            high = rgb(0.5, 0, 0), 
                            name = "Average NMU", 
                            label = scales::comma,
-                           limits = range(state_nmu[, -1], na.rm = TRUE)) + 
+                           limits = if(i < 19) {range(state_nmu[, -c(1, 19)], na.rm = TRUE)}else{NULL}) + 
     theme(legend.position = "right") + 
     theme(panel.background = element_rect(color = "black")) + 
     labs(title = paste("Average", names(state_nmu)[i], "NMU by State (Based on those who have used)", collapse = " ")))
