--- a/state_politics.Rmd
+++ b/state_politics.Rmd
@@ -17,8 +17,8 @@ for (i in 2:19) {
     # political affiliation by 2018 election results ----
   print(plot_usmap(data = nmu_politics, values = "election",
                    labels = FALSE) +
-          scale_fill_gradient2(low = "red", mid = "mediumpurple1",
-                               high = "mediumblue", midpoint = 1,
+          scale_fill_gradient2(low = rgb(0.5, 0, 0), mid = rgb(0.5, 0, 0.5, alpha = 0.1),
+                               high = rgb(0, 0, 0.5),
                                name = "Political Affiliation") +
           theme(legend.position = "right") +
           theme(panel.background = element_rect(color = "black")) +
@@ -29,7 +29,7 @@ for (i in 2:19) {
                    values = names(nmu_politics)[i], labels = FALSE) +
           scale_fill_continuous(
             low = "white", high = "darkred", name = "Average NMU",
-            limits = if (i < 19) {range(nmu_politics[, -c(1, 19:21)])
+            limits = if (i < 19) {range(nmu_politics[, -c(1, 19:23)])
               } else {NULL}) +
           theme(legend.position = "right") +
           theme(panel.background = element_rect(color = "black")) +
@@ -45,15 +45,17 @@ par(mfrow = c(1, 2))
 
 for (i in 2:19) {
   df <- nmu_politics %>% select(state, election, nmu = names(nmu_politics)[i])
+  if (names(nmu_politics)[i] == "dast") {
   print(df %>% ggplot() +
           geom_col(aes(reorder(state, -nmu), nmu, fill = election)) +
-          scale_fill_gradient2(low = "red", mid = "mediumpurple1",
-                               high = "mediumblue", midpoint = 1,
+          scale_fill_gradient2(low = rgb(0.5, 0, 0), mid = rgb(0.5, 0, 0.5, alpha = 0.1),
+                               high = rgb(0, 0, 0.5),
                                name = "Political Affiliation") +
           theme_bw() +
-          labs(title = str_c("Weighted Mean of ", names(nmu_politics)[i],
+          labs(title = str_c("Weighted Mean of ", toupper(names(nmu_politics)[i]),
                              " NMU by State and Political Affiliation"),
                x = "State", y = str_c("Weighted Mean of ",
                                       names(nmu_politics)[i], " NMU")))
+  }
 }
 ```
