--- a/models.Rmd
+++ b/models.Rmd
@@ -28,7 +28,8 @@ dems <- c("DEM_GENDER", "DEM_AGE10", "DEM_STDNT", "DEM_VET",
 nmu_model <- us18 %>%
   mutate(NMU = nmu_aggregate, ANY = any_nmu) %>%
   select(dems, WT, ANY, NMU, DAST_SUM, nmus)
-complete_model <- glm(formula = DAST_SUM ~ . - NMU - WT, weights = WT, data = nmu_model)
+complete_model <- glm(formula = DAST_SUM ~ . - NMU - WT,
+                      weights = WT, data = nmu_model)
 summary(complete_model)
 ```
 
@@ -36,7 +37,8 @@ summary(complete_model)
 library(randomForest)
 set.seed(129)
 train <- nmu_model[sample(nrow(nmu_model), .8*nrow(nmu_model)),]
-bag_tree <- randomForest(DAST_SUM ~ . - WT - ANY, data = train, ntree = 100, importance = TRUE)
+bag_tree <- randomForest(DAST_SUM ~ . - WT - ANY, data = train,
+                         ntree = 100, importance = TRUE)
 varImpPlot(bag_tree)
 bag_preds <- predict(bag_tree, newdata = validation)
 ```
